<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright AllSeen Alliance. All rights reserved.

Permission to use, copy, modify, and/or distribute this software for any
purpose with or without fee is hereby granted, provided that the above
copyright notice and this permission notice appear in all copies.

THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#66515151" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="vertical" >

        <!-- Onboardee -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboardee_info"
            android:textColor="@android:color/holo_purple"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_ssid"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_onboardee_ssid_editText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:contentDescription="run_onboarding_onboardee_ssid_editText"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/onboardee_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/hidden_network"
            android:textColor="#aeaeae"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_authentication"
                android:textColor="#848482"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/run_onboarding_onboardee_authType_spinner"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:contentDescription="run_onboarding_onboardee_authType_spinner"
                android:drawablePadding="0dp"
                android:dropDownHorizontalOffset="0dp"
                android:dropDownVerticalOffset="1dp"
                android:dropDownWidth="fill_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_password"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_onboardee_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_onboardee_password_editText"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_connection_timeout"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_onboardeeConnectionTimeoutMsec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_onboardeeConnectionTimeoutMsec"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_annoucement_timeout"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_onboardeeAnnoucementTimeoutMsec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_onboardeeAnnoucementTimeoutMsec"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_purple" />

        <!-- Target -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/target_info"
            android:textColor="@android:color/holo_purple"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_ssid"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_target_ssid_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_target_ssid_editText"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/target_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/hidden_network"
            android:textColor="#aeaeae"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_authentication"
                android:textColor="#848482"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/run_onboarding_target_authType_spinner"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:contentDescription="run_onboarding_target_authType_spinner"
                android:drawablePadding="0dp"
                android:dropDownHorizontalOffset="0dp"
                android:dropDownVerticalOffset="1dp"
                android:dropDownWidth="fill_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_password"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_target_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_target_password_editText"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_connection_timeout"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_targrt_connection_timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_targrt_connection_timeout"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/onboarding_annoucement_timeout"
                android:textColor="#848482"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/run_onboarding_targrt_anoucement_timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="run_onboarding_targrt_anoucement_timeout"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>